Patch 6.0.264 Problem:    The amount of virtual memory is used to initialize 'maxmemtot', 	    which may be much more than the amount of physical memory, 	    resulting in a lot of swapping. Solution:   Get the amount of physical memory with sysctl(), sysconf() or 	    sysinfo() when possible. Files:	    src/auto/configure, src/configure.in, src/config.h.in, 	    src/os_unix.c, src/os_unix.h

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -176,6 +176,9 @@
 #undef HAVE_STRPBRK
 #undef HAVE_STRTOL
 #undef HAVE_ST_BLKSIZE
+#undef HAVE_SYSCONF
+#undef HAVE_SYSCTL
+#undef HAVE_SYSINFO
 #undef HAVE_TGETENT
 #undef HAVE_USLEEP
 #undef HAVE_UTIME
@@ -202,8 +205,8 @@
 #undef HAVE_SGTTY_H
 #undef HAVE_STRINGS_H
 #undef HAVE_STROPTS_H
-#undef HAVE_SYS_ACL_H
 #undef HAVE_SYS_ACCESS_H
+#undef HAVE_SYS_ACL_H
 #undef HAVE_SYS_DIR_H
 #undef HAVE_SYS_IOCTL_H
 #undef HAVE_SYS_NDIR_H
@@ -214,6 +217,8 @@
 #undef HAVE_SYS_SELECT_H
 #undef HAVE_SYS_STATFS_H
 #undef HAVE_SYS_STREAM_H
+#undef HAVE_SYS_SYSCTL_H
+#undef HAVE_SYS_SYSINFO_H
 #undef HAVE_SYS_SYSTEMINFO_H
 #undef HAVE_SYS_TIME_H
 #undef HAVE_SYS_UTSNAME_H
