Patch 6.1.089 Problem:    On BSDI systems there is no ss_sp field in stack_t. (Robert Jan) Solution:   Use ss_base instead. Files:	    src/auto/configure, src/configure.in, src/config.h.in, 	    src/os_unix.c

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -92,6 +92,9 @@
 /* Define to `struct sigaltstack' if <signal.h> doesn't define.  */
 #undef stack_t
 
+/* Define if stack_t has the ss_base field. */
+#undef HAVE_SS_BASE
+
 /* Define if you can safely include both <sys/time.h> and <time.h>.  */
 #undef TIME_WITH_SYS_TIME
 
