Patch 6.1.104 Problem:    GCC 3.1 appears to have an optimizer problem that makes test 3 	    crash. Solution:   For GCC 3.1 add -fno-strength-reduce to avoid the optimizer bug. 	    Filter out extra info from "gcc --version". Files:	    src/auto/configure, src/configure.in

--- a/src/configure.in
+++ b/src/configure.in
@@ -1,6 +1,7 @@
 dnl configure.in: autoconf script for Vim
 
 dnl Process this file with autoconf 2.12 or 2.13 to produce "configure".
+dnl Does NOT work with autoconf 2.50 - 2.53!
 
 AC_INIT(vim.h)
 AC_CONFIG_HEADER(auto/config.h:config.h.in)
@@ -27,10 +28,15 @@ if test -z "$CFLAGS"; then
   test "$GCC" = yes && CFLAGS="-O2 -fno-strength-reduce -Wall"
 fi
 if test "$GCC" = yes; then
-  gccversion=`"$CC" --version`
+  gccversion=`"$CC" --version | sed -e '2,$d;s/^[[^0-9]]*\([[0-9]]\.[[0-9.]]*\).*$/\1/g'`
   if test "$gccversion" = "3.0.1" -o "$gccversion" = "3.0.2"; then
     echo 'GCC 3.0.x has a bug in the optimizer, disabling "-O#"'
     CFLAGS=`echo "$CFLAGS" | sed 's/-O[[23456789]]/-O/'`
+  else
+    if test "$gccversion" = "3.1" && `echo "$CFLAGS" | grep -v fno-strength-reduce >/dev/null`; then
+      echo 'GCC 3.1 has a bug in the optimizer, adding "-fno-strength-reduce"'
+      CFLAGS="$CFLAGS -fno-strength-reduce"
+    fi
   fi
 fi
 
