Patch 6.1.129 Problem:    On Solaris editing "file/" and then "file" results in using the 	    same buffer.  (Jim Battle) Solution:   Before using stat(), check that there is no illegal trailing 	    slash. Files:	    src/auto/configure, src/config.h.in, src/configure.in, 	    src/macros.h src/misc2.c, src/proto/misc2.pro

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -129,6 +129,9 @@
 /* Define if touuper/tolower only work on lower/upercase characters */
 #undef BROKEN_TOUPPER
 
+/* Define if stat() ignores a trailing slash */
+#undef STAT_IGNORES_SLASH
+
 /* Define if tgetstr() has a second argument that is (char *) */
 #undef TGETSTR_CHAR_P
 
