--- a/src/configure.in
+++ b/src/configure.in
@@ -1761,6 +1761,14 @@ AC_TRY_COMPILE(
 	AC_MSG_RESULT(yes); AC_DEFINE(HAVE_ST_BLKSIZE),
 	AC_MSG_RESULT(no))
 
+AC_MSG_CHECKING(whether stat() ignores a trailing slash)
+AC_TRY_RUN(
+[#include <sys/types.h>
+#include <sys/stat.h>
+main() {struct stat st;  exit(stat("configure/", &st) != 0); }],
+	AC_MSG_RESULT(yes); AC_DEFINE(STAT_IGNORES_SLASH),
+	AC_MSG_RESULT(no), AC_MSG_ERROR(failed to compile test program))
+
 dnl Link with iconv for charset translation, if not found without library.
 dnl check for iconv() requires including iconv.h
 dnl Add "-liconv" when possible; Solaris has iconv but use GNU iconv when it
