Patch 6.1.221 Problem:    Changing case may not work properly, depending on the current 	    locale. Solution:   Add the 'casemap' option to let the user chose how changing case 	    is to be done. 	    Also fix lowering case when an UTF-8 character doesn't keep the 	    same byte length. Files:	    runtime/doc/options.txt, src/ascii.h, src/auto/configure, 	    src/buffer.c, src/charset.c, src/config.h.in, src/configure.in, 	    src/diff.c, src/edit.c, src/eval.c, src/ex_cmds2.c, 	    src/ex_docmd.c, src/ex_getln.c, src/fileio.c, src/gui_amiga.c 	    src/gui_mac.c, src/gui_photon.c, src/gui_w48.c, src/gui_beos.cc, 	    src/macros.h, src/main.c, src/mbyte.c, src/menu.c, src/message.c, 	    src/misc1.c, src/misc2.c, src/option.c, src/os_msdos.c, 	    src/os_mswin.c, src/proto/charset.pro, src/regexp.c, src/option.h, 	    src/syntax.c

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -186,6 +186,8 @@
 #undef HAVE_SYSCTL
 #undef HAVE_SYSINFO
 #undef HAVE_TGETENT
+#undef HAVE_TOWLOWER
+#undef HAVE_TOWUPPER
 #undef HAVE_USLEEP
 #undef HAVE_UTIME
 #undef HAVE_BIND_TEXTDOMAIN_CODESET
