--- a/src/configure.in
+++ b/src/configure.in
@@ -33,8 +33,8 @@ if test "$GCC" = yes; then
     echo 'GCC 3.0.x has a bug in the optimizer, disabling "-O#"'
     CFLAGS=`echo "$CFLAGS" | sed 's/-O[[23456789]]/-O/'`
   else
-    if test "$gccversion" = "3.1" && `echo "$CFLAGS" | grep -v fno-strength-reduce >/dev/null`; then
-      echo 'GCC 3.1 has a bug in the optimizer, adding "-fno-strength-reduce"'
+    if test "$gccversion" = "3.1" -o "$gccversion" = "3.2" && `echo "$CFLAGS" | grep -v fno-strength-reduce >/dev/null`; then
+      echo 'GCC 3.1 and 3.2 have a bug in the optimizer, adding "-fno-strength-reduce"'
       CFLAGS="$CFLAGS -fno-strength-reduce"
     fi
   fi
