--- a/src/config.h.in
+++ b/src/config.h.in
@@ -254,6 +254,7 @@
 /* #undef STDC_HEADERS */
 
 /* instead, we check a few STDC things ourselves */
+#undef HAVE_STDARG_H
 #undef HAVE_STDLIB_H
 #undef HAVE_STRING_H
 
