--- a/src/configure.in
+++ b/src/configure.in
@@ -1391,8 +1391,8 @@ if test $ac_cv_header_sys_wait_h = no; then
 		AC_MSG_RESULT(no))
 fi
 
-AC_CHECK_HEADERS(stdlib.h string.h sys/select.h sys/utsname.h termcap.h \
-	fcntl.h sgtty.h sys/ioctl.h sys/time.h termio.h \
+AC_CHECK_HEADERS(stdarg.h stdlib.h string.h sys/select.h sys/utsname.h \
+	termcap.h fcntl.h sgtty.h sys/ioctl.h sys/time.h termio.h \
 	iconv.h langinfo.h unistd.h stropts.h errno.h strings.h \
 	sys/resource.h sys/systeminfo.h locale.h \
 	sys/stream.h sys/ptem.h termios.h libc.h sys/statfs.h \
