Patch 6.1.362 Problem:    tgetent() may return zero for success. tgetflag() may return -1 	    for an error. Solution:   Check tgetflag() for returning a positive value.  Add an autoconf 	    check for the value that tgetent() returns. Files:	    src/auto/configure, src/config.h.in, src/configure.in, src/term.c

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -135,6 +135,9 @@
 /* Define if tgetstr() has a second argument that is (char *) */
 #undef TGETSTR_CHAR_P
 
+/* Define if tgetent() returns zero for an error */
+#undef TGETENT_ZERO_ERR
+
 /* Define if the getcwd() function should not be used.  */
 #undef BAD_GETCWD
 
