Patch 6.1.366 Problem:    Can't use Vim with Netbeans. Solution:   Add the Netbeans interface.  Includes support for sign icons and 	    "-fg" and "-bg" arguments for GTK.  Add the 'autochdir' 	    option.  (Gordon Prieur, George Hernandez, Dave Weatherford) 	    Make it possible to display both a sign with a text and one with 	    line highlighting in the same line. 	    Add support for Agide, interface version 2.1. Files:	    runtime/doc/Makefile, runtime/doc/netbeans.txt, 	    runtime/doc/options.txt, runtime/doc/various.txt, 	    src/Makefile, src/auto/configure, src/buffer.c, src/config.h.in, 	    src/config.mk.in, src/configure.in, src/edit.c, src/ex_cmds.c, 	    src/ex_docmd.c, src/feature.h, src/fileio.c, src/globals.h, 	    src/gui.c, src/gui_beval.c, src/gui_gtk_x11.c, src/gui_x11.c, 	    src/main.c, src/memline.c, src/misc1.c, src/misc2.c, src/move.c, 	    src/nbdebug.c, src/nbdebug.h, src/netbeans.c, src/normal.c, 	    src/ops.c, src/option.c, src/option.h, src/proto/buffer.pro, 	    src/proto/gui_beval.pro, src/proto/gui_gtk_x11.pro, 	    src/proto/gui_x11.pro, src/proto/misc2.pro, 	    src/proto/netbeans.pro, src/proto/normal.pro, src/proto/ui.pro, 	    src/proto.h, src/screen.c, src/structs.h, src/ui.c, src/undo.c, 	    src/vim.h, src/window.c, src/workshop.c

--- a/src/configure.in
+++ b/src/configure.in
@@ -588,6 +588,57 @@ if test "$enable_workshop" = "yes"; then
   fi
 fi
 
+AC_MSG_CHECKING(--enable-netbeans argument)
+AC_ARG_ENABLE(netbeans,
+	[  --enable-netbeans       Include NetBeans integration support.], ,
+	[enable_netbeans="no"])
+AC_MSG_RESULT($enable_netbeans)
+if test "$enable_netbeans" = "yes"; then
+  AC_MSG_CHECKING(whether compiling netbeans integration is possible)
+  AC_TRY_COMPILE([
+#include <stdio.h>
+#include <stdlib.h>
+#include <stdarg.h>
+#include <fcntl.h>
+#include <netdb.h>
+#include <netinet/in.h>
+#include <errno.h>
+#include <sys/types.h>
+#include <sys/socket.h>
+	/* Check use of vsnprintf() */
+	void warn(char *fmt, ...);
+	void warn(char *fmt, ...)
+	{
+	  va_list ap; char *buf = NULL;
+	  va_start(ap, fmt);
+	  vsnprintf(buf, 100, fmt, ap);
+	  va_end(ap);
+	}
+	/* Check bitfields */
+	struct nbbuf {
+	unsigned int  initDone:1;
+	ushort signmaplen;
+	};
+	    ], [
+		/* Check creating a socket. */
+		struct sockaddr_in server;
+		(void)socket(AF_INET, SOCK_STREAM, 0);
+		(void)htons(100);
+		(void)gethostbyname("microsoft.com");
+		if (errno == ECONNREFUSED)
+		  (void)connect(1, (struct sockaddr *)&server, sizeof(server));
+	    ],
+	AC_MSG_RESULT(yes),
+	AC_MSG_RESULT(no); enable_netbeans="no")
+fi
+if test "$enable_netbeans" = "yes"; then
+  AC_DEFINE(FEAT_NETBEANS_INTG)
+  NETBEANS_SRC="netbeans.c"
+  AC_SUBST(NETBEANS_SRC)
+  NETBEANS_OBJ="objects/netbeans.o"
+  AC_SUBST(NETBEANS_OBJ)
+fi
+
 AC_MSG_CHECKING(--enable-sniff argument)
 AC_ARG_ENABLE(sniff,
 	[  --enable-sniff          Include Sniff interface.], ,
