--- a/src/config.h.in
+++ b/src/config.h.in
@@ -347,6 +347,9 @@
 /* Define if you want to include Sun Visual Workshop support. */
 #undef FEAT_SUN_WORKSHOP
 
+/* Define if you want to include NetBeans integration. */
+#undef FEAT_NETBEANS_INTG
+
 /* Define default global runtime path */
 #undef RUNTIME_GLOBAL
 
