Patch 6.1.389 (depends on 6.1.366) Problem:    Balloon evaluation doesn't work for GTK. 	    has("balloon_eval") doesn't work. Solution:   Add balloon evaluation for GTK.  Also improve displaying of signs. 	    (Daniel Elstner) 	    Also make ":gui" start the netbeans connection and avoid using 	    netbeans functions when the connection is not open. Files:	    src/Makefile, src/feature.h, src/gui.c, src/gui.h, 	    src/gui_beval.c, src/gui_beval.h, src/gui_gtk.c, 	    src/gui_gtk_x11.c, src/eval.c, src/memline.c, src/menu.c, 	    src/netbeans.c, src/proto/gui_beval.pro, src/proto/gui_gtk.pro, 	    src/structs.h, src/syntax.c, src/ui.c, src/workshop.c

--- a/src/Makefile
+++ b/src/Makefile
@@ -977,9 +977,11 @@ LINKIT = @echo >/dev/null
 #GUI_TESTTARGET = $(NONE_TESTTARGET)
 
 ### GTK GUI
-GTK_SRC		= gui.c gui_gtk.c gui_gtk_x11.c pty.c gui_gtk_f.c
+GTK_SRC		= gui.c gui_gtk.c gui_gtk_x11.c pty.c gui_gtk_f.c \
+		  	gui_beval.c
 GTK_OBJ		= objects/gui.o objects/gui_gtk.o objects/gui_gtk_x11.o \
-			objects/pty.o objects/gui_gtk_f.o
+			objects/pty.o objects/gui_gtk_f.o \
+			objects/gui_beval.o
 GTK_DEFS	= -DFEAT_GUI_GTK $(NARROW_PROTO)
 GTK_IPATH	= $(GUI_INC_LOC)
 GTK_LIBS_DIR	= $(GUI_LIB_LOC)
