Patch 6.1.404 (extra) Problem:    Various small problems. Solution:   Fix comments.  Various small additions, changes in indent, removal 	    of unused items and fixes. Files:	    Makefile, README.txt, runtime/menu.vim, runtime/vimrc_example.vim, 	    src/INSTALL, src/INSTALLole.txt, src/Make_bc5.mak, 	    src/Make_cyg.mak, src/Make_ming.mak, src/Makefile, 	    src/config.h.in, src/edit.c, src/eval.c, src/ex_cmds2.c, 	    src/ex_docmd.c, src/ex_getln.c, src/fileio.c, src/getchar.c, 	    src/gui.c, src/gui_gtk.c, src/gui_photon.c, src/if_cscope.c, 	    src/if_python.c, src/keymap.h, src/mark.c, src/mbyte.c, 	    src/message.c, src/misc1.c, src/misc2.c, src/normal.c, 	    src/option.c, src/os_os2_cfg.h, src/os_win32.c, 	    src/proto/getchar.pro, src/proto/message.pro, 	    src/proto/regexp.pro, src/screen.c, src/structs.h, src/syntax.c, 	    src/term.c, src/testdir/test15.in, src/testdir/test15.ok, 	    src/vim.rc, src/xxd/Make_cyg.mak, src/xxd/Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -37,6 +37,8 @@
 #		--enable-cscope		for Cscope interface
 #	- Uncomment one of the lines with --with-features= to enable a set of
 #	  features (but not the interfaces just mentioned).
+#	- Uncomment the line with --disable-acl to disable ACL support even
+#	  though your system supports it.
 #	- Uncomment the line with --disable-gpm to disable gpm support
 #	  even though you have gpm libraries and includes
 #	- Uncomment one of the lines with CFLAGS and/or CC if you have
@@ -378,6 +380,10 @@ CClink = $(CC)
 # FONTSET - X fontset support for output of languages with many characters.
 # Uncomment this when you want to output a multibyte language.
 #CONF_OPT_OUTPUT = --enable-fontset
+
+# ACL - Uncomment this when you do not want to include ACL support, even
+# though your system does support it.  E.g., when it's buggy.
+#CONF_OPT_ACL = --disable-acl
 
 # gpm - For mouse support on Linux console via gpm
 # Uncomment this when you do not want to include gpm support, even
@@ -836,7 +842,7 @@ TOOLSSUBLOC	= $(VIMRTLOC)$(TOOLSSUBDIR)
 TUTORSUBLOC	= $(VIMRTLOC)$(TUTORSUBDIR)
 SCRIPTLOC	= $(VIMRTLOC)
 
-### Only set VIMRUNTIMEDIR when VIMRCLOC is set to a different location and
+### Only set VIMRUNTIMEDIR when VIMRTLOC is set to a different location and
 ### the runtime directory is not below it.
 #VIMRUNTIMEDIR = $(VIMRTLOC)
 
@@ -1553,6 +1559,8 @@ installruntime: $(HELPSOURCE)/vim.1 $(DEST_MAN) $(DEST_VIM) $(DEST_RT) \
 	@sed -e s+/usr/local/lib/vim+$(SCRIPTLOC)+ \
 		$(HELPSOURCE)/evim.1 > $(DEST_MAN)/$(EVIMNAME).1
 	chmod $(MANMOD) $(DEST_MAN)/$(EVIMNAME).1
+	@echo generating help tags
+	-@cd $(HELPSOURCE); make tags
 	cd $(HELPSOURCE); $(INSTALL_DATA) *.txt tags $(DEST_HELP)
 	cd $(DEST_HELP); chmod $(HELPMOD) *.txt tags
 	$(INSTALL_DATA)  $(HELPSOURCE)/*.pl $(DEST_HELP)
