--- a/src/configure.in
+++ b/src/configure.in
@@ -627,7 +627,7 @@ AC_ARG_ENABLE(netbeans,
 AC_MSG_RESULT($disable_netbeans)
 if test "$disable_netbeans" = "no"; then
   AC_MSG_CHECKING(whether compiling netbeans integration is possible)
-  AC_TRY_COMPILE([
+  AC_TRY_LINK([
 #include <stdio.h>
 #include <stdlib.h>
 #include <stdarg.h>
