Patch 6.2f.035 Problem:    The configure check for the netbeans interface doesn't work if the 	    socket and nsl libraries are required. Solution:   Check for the socket and nsl libraries before the netbeans check. Files:	    src/auto/configure, src/configure.in

--- a/src/configure.in
+++ b/src/configure.in
@@ -630,6 +630,9 @@ AC_ARG_ENABLE(netbeans,
 	, [enable_netbeans="yes"])
 if test "$enable_netbeans" = "yes"; then
   AC_MSG_RESULT(no)
+  dnl On Solaris we need the socket and nsl library.
+  AC_CHECK_LIB(socket, socket)
+  AC_CHECK_LIB(nsl, gethostbyname)
   AC_MSG_CHECKING(whether compiling netbeans integration is possible)
   AC_TRY_LINK([
 #include <stdio.h>
